@@ -21,7 +21,7 @@ import zipfile
 
 import lxml.html
 
-from beancount.web import scrape
+from beancount.utils import scrape
 from beancount.web import web
 from beancount.utils import file_utils
 from beancount.parser import version
